[package]
name = "bathory18"
version = "0.1.0"
authors = ["tho <tho@b0x.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
feed-rs = "0.4.0"
reqwest = { version = "0.10.6", features = ["blocking", "rustls-tls"] }
unicode-width = "0.1.7"
notify-rust = "4.0.0"
csv = "1.1.3"
serde = "1.0.111"
dirs = "3.0.1"
single-instance = "0.1.2"
